swagger.yaml:  * updated response contract from /cleaners/{id}/cleanings functions.js:  * updated cleaners_lookup cleanings_controller.js:  * updated pipeline to return { cleaner: _info_,   properties: [     {         _info_,         cleanings: [{_info_}...]     }...   ] }
fixes #6
