# api/swagger/swagger.yaml
@@ -316,7 +316,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/CleaningsResponse"
+            $ref: "#/definitions/CleanerCleaningsResponse"
         default:
           description: Failure
           schema:
@@ -425,18 +425,46 @@ definitions:
         type: string
       end:
         type: string
-
+  CleanerCleaningsResponse:
+    # Used as response for:
+    #      /cleaners/{id}/cleanings to return a list of cleanings for this cleaner
+    # and  /properties/{id}/cleanings to return a list of cleanings for this property
+    required:
+      - name
+      - email
+      - phone
+      - properties
+    properties:
+      name:
+        type: string
+      email:
+        type: string
+      phone:
+        type: string
+      'properties':
+        type: array
+        items:
+          $ref: "#/definitions/Property"
   CleaningsResponse:
     # Used as response for:
     #      /cleaners/{id}/cleanings to return a list of cleanings for this cleaner
     # and  /properties/{id}/cleanings to return a list of cleanings for this property
     required:
-      - cleanings
+      - name
+      - email
+      - phone
+      #- properties
     properties:
-      cleanings:
-          type: array
-          items:
-            $ref: "#/definitions/Cleaning"
+      name:
+        type: string
+      email:
+        type: string
+      phone:
+        type: string
+      #'properties':
+      #  type: array
+      #  items:
+      #    $ref: "#/definitions/Property"
   ErrorResponse:
     required:
       - message
